update CallSessionManager